eglibc (2.10.1-7) UNRELEASED; urgency=low

  * patches/all/local-ldd.diff: new patch to handle the case where ld.so is
    not executable (wrong architecture), and always trace dynamic library 
    dependencies through the dynamic linker.  Closes: #502189, 
    #552518, #499016.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 08 Nov 2009 22:10:16 +0100

eglibc (2.10.1-6) unstable; urgency=high

  [ Aurelien Jarno ]
  * Don't ask to stop gdm before an upgrade, but run reload in the postint 
    Closes: #553362.
  * patches/powerpc/cvs-readahead.diff: fix readahead on PowerPC.
  * patches/any/cvs-preadv-pwritev.diff: fix preadv, pwritev and fallocate
    for-D_FILE_OFFSET_BITS=64.  Closes: #554608.
  * patches/any/submitted-sched_h.2.diff: allow const argument to CPU_ISSET()
    Closes: #554901.
  * kfreebsd/local-sysdeps.diff: update to revision 2819 (from glibc-bsd).
  * patches/any/submitted-etc-resolv.conf.diff: also handle case when the file
    is present, but a nameserver entry is missing.  Closes: #552010.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 08 Nov 2009 18:56:15 +0100

eglibc (2.10.1-5) unstable; urgency=low

  [ Samuel Thibault ]
  * patches/hurd-i386/local-disable-ioctls.diff: New patch to disable some
    non-working ioctls.
  * patches/hurd-i386/local-pthread_types.diff: Fix path typo.

  [ Aurelien Jarno ]
  * Move xz-utils to Build-Depends from Build-Depends-Indep.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 01 Nov 2009 17:19:00 +0100

eglibc (2.10.1-4) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/any/submitted-localedef-mmap.diff: new patch to cope with
    different mmap alignment restrictions between MMAP_SHARED and 
    MMAP_PRIVATE. On SPARC64, MMAP_SHARED implies a 16kB alignment (L1
    D-Cache size), while MMAP_PRIVATE implies a 8kB alignment (page 
    size).  Closes: #552233.
  * patches/any/submitted-confname.h.diff: new patch to fix build of
    bits/confname.h with -pedantic-errors.  Closes: #552819.