@@ -4,8 +4,10 @@ eglibc (2.10.1-7) UNRELEASED; urgency=low
     not executable (wrong architecture), and always trace dynamic library 
     dependencies through the dynamic linker.  Closes: #502189, 
     #552518, #499016.
+  * Strip *.o files manually (dh_strip does not do it) to prevent
+    leakage of the build directory (has been lost in a merge).
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 08 Nov 2009 22:10:16 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 09 Nov 2009 21:29:00 +0100
 
 eglibc (2.10.1-6) unstable; urgency=high
 
